0.58:
  * Set the 'Via' HTTP header when forwarding requests/responses
  * Add a 'Warning' HTTP header when content-encoding is changed
  * Honor the 'Max-Forwards' HTTP header for OPTIONS requests
  * Adjust empty paths in requests to be '/'. This was causing
    "puzzling header received" errors.

0.57:
  * Oopsie, fix umask to 0177

0.56:
  * fix dropping of root privileges if run as root
  * set umask to 0277
  * dont compress if no appropriate Accept-Encoding header is found

0.55:
  * Also support Content-Encoding: deflate and identity
  * Updated german translations

0.54:
  * add <area> to tags-with-no-end-tag in Rewriter rule
  * added more advert filters
  * remove unused blacklist zappers from CVS
  * fix string joining in wc.__init__.text_status()
  * really remove Content-Length header for rewritten content
  * only rely on mime type guessing values if both encoding and
    mime type were found

0.53:
  * only filter some <meta name> tags, not all
  * README.squid, a sample squid configuration file to use with
    WebCleaner, was added
  * added some more advertising urls to filter
  * minor code cleanups
  * guess mime types non-strict (see Python docs)
  * use True/False boolean constants, which makes us...
  * ...Require Python >= 2.2